--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section id="hero">
             <div class="container">
                 <div class="row gy-4 align-items-center">
-                    <div class="col-12 col-md-6 text-md-center">
+                    <div class="col-12 col-md-6">
                         <article class="hero-text">
                             <h1>YUMINOUILLES</h1>
                             <h2>Manger bien, manger bon, manger bio.</h2>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section id="menus" class="mt-5">
+        <section id="menus" class="border-bottom pb-3">
             <div class="container">
                 <h1 class="headline">Nos menus</h1>
                 <!-- Début des cards -->
@@ -90,7 +90,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural
                                 lead-in to additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn btn-primary">Reserver</a>
+                            <a href="#" class="btn btn-success">Reserver</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural
                                 lead-in to additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn btn-primary">Reserver</a>
+                            <a href="#" class="btn btn-success">Reserver</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural
                                 lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Reserver</a>
+                            <a href="#" class="btn btn-success">Reserver</a>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">This is a longer card with supporting text below as a natural
                                 lead-in to additional content. This content is a little bit longer.</p>
-                            <a href="#" class="btn btn-primary">Reserver</a>
+                            <a href="#" class="btn btn-success">Reserver</a>
                         </div>
                     </div>
                 </div>
@@ -134,27 +134,30 @@
             <!-- fin des cards -->
             </div>
         </section>
-        <section id="about">
-            <div class="container" style="border: solid black 1px;">
+        <section id="about" class="border-bottom">
+            <div class="container">
                 <h1 class="headline">A propos de nous</h1>
                 <div class="row">
-                    <div class="col-12 col-md-6">
-                        <h3>Mangez et sauvez le monde</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti impedit incidunt
-                            molestias, odit corrupti repudiandae veniam architecto nobis accusamus aliquam voluptatibus
-                            nihil culpa? Consectetur commodi laboriosam soluta, voluptas iure impedit.
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit similique quidem,
-                            omnis error sit ad ab. Deleniti ex minima quibusdam excepturi quasi reiciendis consequuntur,
-                            quis et suscipit rerum. Incidunt?
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit similique quidem,
-                            omnis error sit ad ab. Deleniti ex minima quibusdam excepturi quasi reiciendis consequuntur,
-                            quis et suscipit rerum. Incidunt?
-                        </p>
+                    <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
+                        <article>
+                            <h3>Manger et sauvez le monde</h3>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti impedit incidunt
+                                molestias, odit corrupti repudiandae veniam architecto nobis accusamus aliquam
+                                voluptatibus
+                                nihil culpa? Consectetur commodi laboriosam soluta, voluptas iure impedit.
+
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit similique quidem,
+                                omnis error sit ad ab. Deleniti ex minima quibusdam excepturi quasi reiciendis
+                                consequuntur,
+                                quis et suscipit rerum. Incidunt?
+
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio impedit similique quidem,
+                                omnis error sit ad ab. Deleniti ex minima quibusdam excepturi quasi reiciendis
+                                consequuntur,
+                                quis et suscipit rerum. Incidunt?
+                            </p>
+                        </article>
                     </div>
                     <div class="col">
                         <figure class="chef">
@@ -166,8 +169,66 @@
                 </div>
             </div>
         </section>
+        <section id="contact">
+            <div class="container">
+                <h1 class="headline">Contact</h1>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="row">
+                            <div class="col d-grid">
+                                <h3>Nontre adresse</h3>
+                                <div class="separator"></div>
+                                <marquee behavior="" direction="">
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing...
+                                </marquee>
+                                <div class="iframe-container">
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.2156138385935!2d-3.9900010255247502!3d5.384068735355705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfc1935584523fa5%3A0xf1df22f1d6f49aff!2sEspace%20Gastronomique%20-%20Le%20Go%C3%BBt%20plus!5e0!3m2!1sfr!2sci!4v1709664007648!5m2!1sfr!2sci"
+                                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                                    </iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <form action="">
+                            <h3>Laissez nous un message</h3>
+                            <div class="separator"></div>
+                            <div class="row mt-2">
+                                <div class="col-12 col-md-6">
+                                    <div class="group d-flex flex-column">
+                                        <label for="name">Votre nom</label>
+                                        <input type="text" id="name">
+                                        <i class="fa-solid fa-user"></i>
+                                    </div>
+                                    <div class="group d-flex flex-column">
+                                        <label for="number">Votre numéro</label>
+                                        <input type="number" id="number">
+                                        <i class="fa-solid fa-phone"></i>
+                                    </div>
+                                    <div class="group d-flex flex-column">
+                                        <label for="email">Votre couriel</label>
+                                        <input type="email" id="name">
+                                        <i class="fa-solid fa-envelope"></i>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <label for="message">Votre message</label>
+                                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col d-grid gap-2 col-6 mx-auto">
+                                    <button type="submit" class="btn btn-success">Envoyer</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer class="border-top">
+    <footer class="mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-4">
